--- a/book/02gy_cpp/02gy_cpp.tex
+++ b/book/02gy_cpp/02gy_cpp.tex
@@ -25,40 +25,37 @@
 	\begin{lstlisting}
 int x;
 
-int main()
-{
-	int x = 1;
-	{
-		int x = 2;
-		std::cout << x << std::endl; // 2
-	}
+int main() {
+  int x = 1;
+  {
+    int x = 2;
+    std::cout << x << std::endl; // 2
+  }
 }
 	\end{lstlisting}
 	Megfigyelhető, hogy a \texttt{main} függvény elején létrehozott \texttt{x} az utána következő blokkban teljesen elérhetetlen -- nincs olyan szabványos nyelvi eszköz, amivel tudnánk rá hivatkozni. Ezt a folyamatot \textbf{leárnyékolás}nak (\textit{shadowing}) nevezzük. Azonban a külső, globális \texttt{x}-re bármikor tudunk hivatkozni az alábbi módon:
 	\begin{lstlisting}
 int x;
 
-int main()
-{
-	int x = 1;
-	{
-		int x = 2;
-		std::cout << ::x << std::endl; // 0
-	}
+int main() {
+  int x = 1;
+  {
+    int x = 2;
+    std::cout << ::x << std::endl; // 0
+  }
 }
 	\end{lstlisting}
 	\subsection{Jobb- és balérték}
 	A láthatóság és élettartam fogalmával szoros összeköttetésben áll a \textbf{jobb- és balérték} fogalma. Egy objektumot \textbf{balértéknek} (\textit{left value}, röviden \textit{lvalue}) nevezzük, ha címképezhető, és \textbf{jobbértéknek} (\textit{right value}, röviden \textbf{rvalue}) ha nem. Példaképp:
 	\begin{lstlisting}
-int main()
-{
-	int *p, r; //balértékek
-	&p; //ok, p pointer memóriacímére mutat
-	&r; //ok, r memóriacímére mutat
-	&5; //nem ok, 5 jobbérték
-	&"Hello World!"; //nem ok, "Hello World!" jobbérték
-	&&r; //nem ok, címképzés eredménye jobbérték
-	5 = r; //nem ok, jobbértéknek nem lehet értéket adni
+int main() {
+  int *p, r;       // balértékek
+  &p;              // ok, p pointer memóriacímére mutat
+  &r;              // ok, r memóriacímére mutat
+  &5;              // nem ok, 5 jobbérték
+  &"Hello World!"; // nem ok, "Hello World!" jobbérték
+  &&r;             // nem ok, címképzés eredménye jobbérték
+  5 = r;           // nem ok, jobbértéknek nem lehet értéket adni
 }
 	\end{lstlisting}
 	A jobbértékek többnyire ideiglenes objektumok, pl. egy érték szerint visszatérő függvény visszatérési értéke,  literálok mint pl. \texttt{5}, \texttt{"Hello World!"}. Lévén ezek az objektumok csak ideiglenesen szerepelnek a memóriában (sőt, gyakran egyáltalán nem, ha a fordító kioptimalizálja, ahogy azt korábban láthattuk), ezért hiba lenne a memóriacímükre hivatkozni, így a fordító ezt nem is engedi.
@@ -68,17 +65,15 @@ int main()
 	\begin{lstlisting}
 #include <iostream>
 
-int f()
-{
-	int x = 0; //x létrejön
-	++x;
-	return x;
-} //x megsemmisül
+int f() {
+  int x = 0; // x létrejön
+  ++x;
+  return x;
+} // x megsemmisül
 
-int main()
-{
-	for (int i = 0; i<5; i++)
-		std::cout << f() << ' '; // 1 1 1 1 1
+int main() {
+  for (int i = 0; i < 5; i++)
+    std::cout << f() << ' '; // 1 1 1 1 1
 }
 	\end{lstlisting}
 	\medskip
@@ -99,10 +94,9 @@ int main()
 	\section{Mutatók}
 	A mutatók olyan nyelvi elemek, melyek egy adott típusú memóriaterületre mutatnak. Segítségükkel anélkül is tudunk hivatkozni egy adott objektumra (és nem csak a másolatára), hogy közvetlenül az objektummal dolgoznánk.
 	\begin{lstlisting}
-int main()
-{
-	int c = 5, d = 8;
-	int *p = &c;
+int main() {
+  int c = 5, d = 8;
+  int *p = &c;
 }
 	\end{lstlisting}
 	A fenti példában \texttt{p} egy mutató (\textit{pointer}), mely egy \texttt{int} típusra mutat. Ahhoz, hogy értéket tudjunk adni egy mutatónak, egy memóriacímet kell neki értékül adni, erre való a \textbf{címképző operátor} (\&). Ha a mutató által \textit{mutatott értéket} szeretnénk módosítani, akkor dereferálnunk kell a \textbf{dereferáló operátor}ral (*).
@@ -110,8 +104,8 @@ int main()
 	A mutatók működését az alábbi példa demonstrálja:
 	\begin{lstlisting}
 int c = 5, d = 8;
-int *p = &c; //referáljuk c-t
-*p = 4; //dereferáljuk p-t
+int *p = &c; // referáljuk c-t
+*p = 4;      // dereferáljuk p-t
 p = &d;
 *p = 7;
 	\end{lstlisting}
@@ -163,11 +157,11 @@ int const *p;
 	\end{lstlisting}
 	A fenti két sor ugyanazt jelenti, a mutatott értéket nem lehet megváltoztatni a mutatón keresztül.
 	\begin{lstlisting}
-int * const p;
+int *const p;
 	\end{lstlisting} 
 	Amennyiben a * után van a \texttt{const}, akkor egy \textbf{konstans mutatót kapunk}, mely megváltoztathatja a mutatott értéket, de nem mutathat másra (konstans mutató\quad$\not=$\quad konstanra mutató mutató). Nyilván, egy pointer lehet egy konstansra mutató konstans mutató is, amin keresztül nem lehet megváltoztatni a mutatott értéket és a mutatót sem lehet máshova átállítani.
 	\begin{lstlisting}
-const int * const p;
+const int *const p;
 	\end{lstlisting}
 	\subsection{Mutatóra mutató mutatók} 
 	Mutatóra mutató mutatók is léteznek. Néhány példa:
@@ -187,25 +181,24 @@ int **q = &p;
 	\begin{lstlisting}
 int c, d;
 int *p = &c;
-int * const *q = &p;
+int *const *q = &p;
 *q = &d; // forditasi hiba
 	\end{lstlisting}
 	Mivel \texttt{q} egy \texttt{int}-re mutató konstans mutatóra mutató mutató, így csak egy olyan mutatóval tudunk rámutatni, ami egy \texttt{int}-re mutató konstans mutatóra mutató mutatóra mutató mutató.
 	\begin{lstlisting}
 int c, d;
 int *p = &c;
-int * const *q = &p;
-int *const ** const r = &q;
+int *const *q = &p;
+int *const **const r = &q;
 	\end{lstlisting}
 	\begin{note}
 		Megnyugtatás végett, ritkán van szükség mutatóra mutató mutatónál bonyolultabb szerkezetre.
 	\end{note}\section{Tömbök}
 	A tömb a C++ egy beépített adatszerkezete, mellyel tömb azonos típusú elemet tárolhatunk és kezelhetünk egységesen. Előzménytárgyakból már megismertük valamennyi funkcionalitását, ám számos veszélyét még nem.
 	\begin{lstlisting}
-int main()
-{
-	int i = 5;
-	int t[] = {5,4,3,2,1};
+int main() {
+  int i = 5;
+  int t[] = {5, 4, 3, 2, 1};
 }
 	\end{lstlisting}
 	\texttt{t} egy 5 elemű \textbf{tömb}. Nézzük meg, mekkora a mérete (figyelem, ez \textbf{implementációfüggő!})!
@@ -226,25 +219,23 @@ std::cout << sizeof(t) << std::endl;
 		\begin{lstlisting}
 for (int i = 0; i < 6; i++) // Hupsz. A csak 5 elem van.
 {
-	std::cout << t[i] << std::endl;
+  std::cout << t[i] << std::endl;
 }
 	\end{lstlisting} 
 	Itt látható, hogy túl fogunk indexelni. Ez {nem definiált viselkedés}hez vezet. Várhatóan memóriaszemetet fog kiolvasni az utolsó elem helyett, de sose tudhatjuk pontosan mi fog történni. Fordítási időben ezt a hibát a fordító nem veszi észre. A gyakorlaton a programot futtatva nem következett be futási idejű hiba.
 	
 	Most növeljük meg az elemeket, és indexeljünk túl egészen 100ig!
 	\begin{lstlisting}
-for (int i = 0; i < 100; i++)
-{
-	++t[i];
+for (int i = 0; i < 100; i++) {
+  ++t[i];
 }
 std::cout << "sajt" << std::endl;
 	\end{lstlisting} 
 	Ez a program továbbra is nem definiált viselkedést tartalmaz. Mivel több memóriához nyúlunk hozzá indokolatlanul, ezért nagyobb rá az esély, hogy futási idejű hibába ütközzünk. Az órán a {sajt} szöveg ki lett írva, mégis kaptunk egy szegmentálási hibát (\textit{segmentation fault}).
 	
 	\begin{lstlisting}
-for (int i = 0; i < 100000; i++)
-{
-	++t[i];
+for (int i = 0; i < 100000; i++) {
+  ++t[i];
 }
 std::cout << "sajt" << std::endl;
 	\end{lstlisting} 
@@ -253,19 +244,18 @@ std::cout << "sajt" << std::endl;
 #include <iostream>
 #include <string>
 
-int main()
-{
-	int t[] = {5,4,3,2,1};
-	int isAdmin = 0;
-	std:string name;
-	std::cin >> name;
-	for (int i = 0; i < name.size(); ++i)
-	{
-		t[i] = 1;
-	}
-	if (name == "pityu")
-		isAdmin = 1;
-	std::cout << "Admin?: " << (isAdmin != 0 ) << std::endl;
+int main() {
+  int t[] = {5, 4, 3, 2, 1};
+  int isAdmin = 0;
+std:
+  string name;
+  std::cin >> name;
+  for (int i = 0; i < name.size(); ++i) {
+    t[i] = 1;
+  }
+  if (name == "pityu")
+    isAdmin = 1;
+  std::cout << "Admin?: " << (isAdmin != 0) << std::endl;
 }
 	\end{lstlisting}
 	Ha a programnak \texttt{pityu}-t adunk meg amikor be akarja olvasni \texttt{name}-et, akkor minden rendben. De mivel a forráskódot ismerjük, azért ha hosszú nevet adnánk (nagyobb mint 5), akkor a túlindexelés miatt ki tudjuk használni a nem definiált viselkedéseket. Az is előfordulhat, hogy az \texttt{isAdmin} memóriacímére írunk, és elérjük, hogy a szoftver adminként authentikáljon valakit, aki nem az.
@@ -288,10 +278,9 @@ int main()
 	\begin{lstlisting}
 #include <iostream>
 
-int main()
-{
-	int t[][3] = {{1,2,3},{4,5,6}};
-	return 0;
+int main() {
+  int t[][3] = {{1, 2, 3}, {4, 5, 6}};
+  return 0;
 }
 	\end{lstlisting}
 	Tekintsük a fenti két dimenziós tömböt. Az első \texttt{[]} jelek közt nincs méret, mert a fordító az inicializáció alapján meg tudja állapítani. A második dimenzió méretének megadása viszont kötelező.
@@ -312,18 +301,16 @@ int main()
 	%http://tex.stackexchange.com/questions/228724/how-do-i-make-tikz-make-a-curved-arrow-from-one-node-to-another-when-my-nodes-ar
 	\begin{lstlisting}
 #include <iostream>
-void swapWrong(int a, int b)
-{
-	int tmp = a;
-	a = b;
-	b = tmp;
+void swapWrong(int a, int b) {
+  int tmp = a;
+  a = b;
+  b = tmp;
 }
 
-int main()
-{
-	int c = 5, d = 8;
-	swapWrong(c, d);
-	std::cout << c << ' ' << d << std::endl; //5 8
+int main() {
+  int c = 5, d = 8;
+  swapWrong(c, d);
+  std::cout << c << ' ' << d << std::endl; // 5 8
 }
 	\end{lstlisting}		
 	Megfigyelhető, hogy nem sikerült \texttt{c} és \texttt{d} értékét megcserélni. Ez azonban egy teljesen jól definiált viselkedés. Ennek az az oka, hogy itt \textbf{érték} szerint vettük át (\textit{pass by value}) \texttt{a} és \texttt{b} paramétert. A következő ábrán megfigyelhetjük mi is történik pontosan. Képzeljük el, hogy a stackbe a program elrakja a \texttt{c} és \texttt{d} változókat. Eztán meghívja a \texttt{swapWrong} függvényt, melyben létrehozott \texttt{a} és \texttt{b} paraméterek szintén a stackre kerülnek. Bár a függvényre lokális \texttt{a} és \texttt{b} paraméterek értékét megcseréli, de a függvényhívás után ezeket ki is törli a stackből. Az eredeti \texttt{c} és \texttt{d} változók éréke nem változott a függvényhívás során. (ld.: \ref{fig_stack_swap_wrong}. ábra)
@@ -337,22 +324,20 @@ int main()
   	Nézzük meg, hogy hogyan tudunk megcserélni két értéket ezúttal helyesen, mutatók segítségével.
 	
 	\begin{lstlisting}
-void swapP(int *a, int *b)
-{
-	int tmp = *a;
-	*a = *b;
-	*b = tmp;
+void swapP(int *a, int *b) {
+  int tmp = *a;
+  *a = *b;
+  *b = tmp;
 }
 	\end{lstlisting}
 	
 	Amennyiben ezt a függvényt hívjuk meg, valóban megcserélődik a két változó értéke. De ehhez fontos, hogy ne \texttt{swapP(c, d)}-t írjunk, az ugyanis az fordítási hibához vezetne, hiszen a \texttt{c} és \texttt{d} típusa \texttt{int}, és nem \texttt{int*}. Ahhoz, hogy értéket adjunk egy pointernek, a \texttt{c}-hez és \texttt{d}-hez tartozó memóriacímeket kell átadni!
 	\begin{lstlisting}
 //...
-int main()
-{
-	int c = 5, d = 8;
-	swapP(&c, &d);
-	std::cout << c << ' ' << d << std::endl; // 8 5
+int main() {
+  int c = 5, d = 8;
+  swapP(&c, &d);
+  std::cout << c << ' ' << d << std::endl; // 8 5
 }
 	\end{lstlisting}
 	\begin{note}
@@ -366,11 +351,10 @@ int main()
 	\end{figure}
 	
 	\begin{lstlisting}
-void swapWrong2(int *a, int *b)
-{
-	int *tmp = a;
-	a = b;
-	b = tmp;
+void swapWrong2(int *a, int *b) {
+  int *tmp = a;
+  a = b;
+  b = tmp;
 }
 	\end{lstlisting}
 	Ebben a példában nem a pointerek által mutatott értéket, hanem magukat a pointereket cseréljük meg. Itt az fog történni, hogy a függvény belsejében \texttt{a} és \texttt{b} pointer másra fog mutatni. A mutatott értékek viszont nem változnak.
@@ -384,18 +368,16 @@ void swapWrong2(int *a, int *b)
 	\subsection{Referencia szerinti paraméter átadás}
 	Megállapíthatjuk, hogy az előző megoldásnál nem változtattuk meg, hogy mire mutassanak a pointerek, így azokat konstansként is definiálhatnánk. A konstans pointerek módosíthatják a mutatott értéket, de nem lehet őket átállítani egy másik memória címre. Úgy tudunk egy ilyen pointert létrehozni, hogy a csillag után írjuk a \texttt{const} kulcsszót.
 	\begin{lstlisting}
-void swap(int * const a, int * const b)
-{
-	//...
+void swap(int *const a, int *const b) {
+  //...
 }
 	\end{lstlisting}
 	Egy kis szintaktikai cukorkával megúszhatjuk azt, hogy folyton kiírjuk a \texttt{* const}-ot (lévén nem akarjuk megváltoztatni, hogy ilyen esetben a pointer hova mutasson). Erre való a {referencia szerinti paraméter átváétel} (\textit{pass by reference}). A referencia hasonlóan működik, mintha egy konstans pointer lenne, csak nem lehet sehova se mutató referenciát létrehozni.
 	\begin{lstlisting}
-void swapRef(int &a, int &b)
-{
-	int tmp = a;
-	a = b;
-	b = tmp;
+void swapRef(int &a, int &b) {
+  int tmp = a;
+  a = b;
+  b = tmp;
 }
 	\end{lstlisting} 
   Ez a függvény lényegében ekvivalens a \texttt{swapP} fügvénnyel. 
@@ -409,25 +391,22 @@ void swapRef(int &a, int &b)
 	\subsection{Visszatérési érték problémája}
 	Nem primitív (pl. \texttt{int}) típusoknál gyakran megeshet, hogy egy adott típushoz tartozó pointer mérete kisebb, mint magának az objektumé, így megérheti mindentől függetlenül a paramétert referencia szerint átvenni. Ezen felbátorodva mondhatnánk azt is, hogy referenciával is térjünk vissza (a követekező példában tekintsünk el attól, hogy \texttt{int}-el dolgozunk, bátran képzeljük azt hogy az pl. egy nagyon nagy mátrix)!
 	\begin{lstlisting}
-int& addOne(int &i)
-{
-	i++;
-	return i;
+int &addOne(int &i) {
+  i++;
+  return i;
 }
 
-int main()
-{
-	int i = 0;
-	int a = addOne(i);
-	std::cout << a << std::endl;
+int main() {
+  int i = 0;
+  int a = addOne(i);
+  std::cout << a << std::endl;
 }
 	\end{lstlisting}
 	A fenti kóddal semmi gond nincs is. De mi van, ha egy picit módosítunk rajta?
 	\begin{lstlisting}
-int& addOne(int &i)
-{
-	int ret = ++i;
-	return ret;
+int &addOne(int &i) {
+  int ret = ++i;
+  return ret;
 }
 	\end{lstlisting}
 	A baj máris megvan, amit egy warning is jelezni fog nekünk: olyan objektumra hivatkozó referenciát adunk vissza, amely \texttt{addOne}-on belül lokális. Ez azt jelenti, hogy amint a vezérlés visszatér a \texttt{main} függvényhez, \texttt{ret} megsemmisül, és a \texttt{main} függvény pedig a \texttt{ret}-hez tartozó címen lévő értéket próbálná meg lemásolni. Mivel viszont a \texttt{ret} már ezen a ponton megsemmisült, semmi nem garantálja, hogy azon a memóriaterületen ne követekezett volna be módosítás.
@@ -440,31 +419,22 @@ int& addOne(int &i)
 	\subsection{Függvények átadása paraméterként}
 	C++ban lehetőségünk van arra is, hogy függvényeket adjunk át paraméterként. Azokat az objektumokat függvény mutatónak (\textit{function pointer}) hívjuk.
 	\begin{lstlisting}
-int add(int a, int b)
-{
-	return a + b;
+int add(int a, int b) { return a + b; }
+
+int mul(int a, int b) { return a * b; }
+
+int reduce(int *start, int size, int initial, int (*op)(int, int)) {
+  int ret = initial;
+  for (int i = 0; i < size; i++) {
+    ret = (*op)(ret, start[i]);
+  }
+  return ret;
 }
 
-int mul(int a, int b)
-{
-	return a * b;
-}
-
-int reduce(int *start, int size, int initial, int (*op)(int, int))
-{
-	int ret = initial;
-	for (int i = 0; i < size; i++)
-	{
-		ret = (*op)(ret, start[i]);
-	}
-	return ret;
-}
-
-int main()
-{
-	int t[] = {1,2,3,4,5};
-	std::cout << reduce(t,5,0,&add) << std::endl;
-	std::cout << reduce(t,5,0,&mul) << std::endl;
+int main() {
+  int t[] = {1, 2, 3, 4, 5};
+  std::cout << reduce(t, 5, 0, &add) << std::endl;
+  std::cout << reduce(t, 5, 0, &mul) << std::endl;
 }
 	\end{lstlisting}
 	
@@ -479,14 +449,13 @@ int main()
 	\begin{lstlisting}
 int reduce(int *start, int size, int initial, int op(int, int)))
 {
-	//...
+  //...
 }
 
-int main()
-{
-	int t[] = {1,2,3,4,5};
-	std::cout << reduce(t,5,0,add) << std::endl;
-	std::cout << reduce(t,5,0,mul) << std::endl;
+int main() {
+  int t[] = {1, 2, 3, 4, 5};
+  std::cout << reduce(t, 5, 0, add) << std::endl;
+  std::cout << reduce(t, 5, 0, mul) << std::endl;
 }
 	\end{lstlisting}
 	\subsection{Tömbök átadása függvényparaméterként}
@@ -494,26 +463,19 @@ int main()
 	\begin{lstlisting}
 #include <iostream>
 
-void f(int t[])
-{
-	std::cout << sizeof(t) << std::endl;
-}
+void f(int t[]) { std::cout << sizeof(t) << std::endl; }
 
-int main()
-{
-	int t[] = {1,2,3,4,5};
-	std::cout << sizeof(t) << std::endl;
-	f(t);
+int main() {
+  int t[] = {1, 2, 3, 4, 5};
+  std::cout << sizeof(t) << std::endl;
+  f(t);
 }
 	\end{lstlisting}
 	Kimenet: \texttt{20 8} (implementáció függő)
 	
 	Bár azt hihettük, hogy \texttt{t} tömb méretét írattuk ki ket alkalommal, valójában amikor azt érték szerint próbálunk meg átadni egy tömböt, az átkonvertálódik a tömb elejére mutató pointerré.
 	\begin{lstlisting}
-void f(int t[8])
-{
-	std::cout << sizeof(t) << std::endl;
-}
+void f(int t[8]) { std::cout << sizeof(t) << std::endl; }
 	\end{lstlisting}
 	Hiába adunk meg egy méretet a tömbnek a függvény fejlécében, még mindig egy pointer mérete lesz a második kiírt szám. Az a tanulság, hogy ha érték szerint akarunk átadni egy tömböt, az át fog konvertálódni pointerré. A legszebb az lenne, ha a fenti szintaxis nem fordulna le. Ennek azonban történelmi oka van, a C-vel való visszafelé kompatibilitás miatt fordul le. 
 	\begin{note}
@@ -525,14 +487,13 @@ void f(int t[8])
 
 void f(int *t, int size) // új paraméter!
 {
-	std::cout << sizeof(t) << std::endl;
+  std::cout << sizeof(t) << std::endl;
 }
 
-int main()
-{
-	int t[] = {1,2,3,4,5};
-	std::cout << sizeof(t) << std::endl;
-	f(t, sizeof(t)/sizeof(t[0]));
+int main() {
+  int t[] = {1, 2, 3, 4, 5};
+  std::cout << sizeof(t) << std::endl;
+  f(t, sizeof(t) / sizeof(t[0]));
 }
 	\end{lstlisting}
 	\begin{note}
@@ -543,10 +504,7 @@ int main()
 	\medskip
 	Ha tömbre mutató mutatót szeretnék, így csinálhatjuk:
 	\begin{lstlisting}
-void g(int (*t)[5])
-{
-	std::cout << sizeof(t) << std::endl;
-}
+void g(int (*t)[5]) { std::cout << sizeof(t) << std::endl; }
 	\end{lstlisting}
 	Azonban ez még mindig egy pointer méretét fogja kiírni, mert a \texttt{t} az egy sima mutató! Ahhoz, hogy megkapjuk, mire mutat, dereferálnunk kell, így a \texttt{sizeof} paraméterének \texttt{*t}-t kell megadni, ha a tömb méretére vagyunk kíváncsiak.
 	\begin{note}
@@ -556,21 +514,19 @@ void g(int (*t)[5])
 	
 	Ha eltérő méretű tömböt próbálunk meg átadni, akkor nem fordul le a kód, mert nem egy 5 elemű tömbre mutató mutató 6 elemű tömbre mutató mutatóvá konvertálódni.
 	\begin{lstlisting}
-int main()
-{
-	int a[6];
-	g(&a); //forditasi hiba!
-	int b[5];
-	g(&b); //ok
+int main() {
+  int a[6];
+  g(&a); // forditasi hiba!
+  int b[5];
+  g(&b); // ok
 }
 	\end{lstlisting}
 	\begin{note}
 		Ahhoz, hogy egy olyan függvényt írjunk, ami minden méretű tömböt elfogad paraméterül, a legegyszerűbb megoldás, ha hagyjuk, hogy a tömb átkonvertálódjon egy első elemre mutató pointerré, és átadjuk külön paraméterben a tömb méretét. Bár van megoldás arra is, hogy egy darab "rugalmas" függvényt írjunk, és az egész tömbről csak egy paramétert vegyünk át. Majd a 7-8. gyakorlaton lesz részletesen szó, de a következő a szintaxis:
 		\begin{lstlisting}
 template <class T, int ArraySize>
-void ( T (&param)[ArraySize] )
-{
-	//...
+void(T (&param)[ArraySize]) {
+  //...
 }
 		\end{lstlisting}
 		\smallskip
@@ -583,14 +539,13 @@ void ( T (&param)[ArraySize] )
 	\begin{lstlisting}
 #include <iostream>
 
-int main()
-{
-	int t[] = {5,4,3,2,1};
-	int *p = t;
-	std::cout << *p << std::endl; // 5
-	std::cout << sizeof(int) << std::endl; // implementációfüggő, legyen x
-	std::cout << sizeof(p) << std::endl; // implementációfüggő, legyen y
-	std::cout << sizeof(t) << std::endl; // 5*x
+int main() {
+  int t[] = {5, 4, 3, 2, 1};
+  int *p = t;
+  std::cout << *p << std::endl;          // 5
+  std::cout << sizeof(int) << std::endl; // implementációfüggő, legyen x
+  std::cout << sizeof(p) << std::endl;   // implementációfüggő, legyen y
+  std::cout << sizeof(t) << std::endl;   // 5*x
 }
 	\end{lstlisting} A fenti program jól szemlélteti, hogy ez nem igaz. A tömb típusa tartalmazza azt az információt, hogy hány elemű a tömb. Egy pointer típusa csak azt az információt tartalmazza, hogy a mutatott elem mekkora. Számos más különbség is van. A tévhit oka az, hogy tömb könnyen konvertálódik első elemre mutató pointerré.
 
