--- a/book/08gy_cpp/08gy_cpp.tex
+++ b/book/08gy_cpp/08gy_cpp.tex
@@ -15,44 +15,40 @@
 	\subsection{Függvény template-ek}
 	Térjünk vissza a régebben megírt swap függvényünkhöz.
 	\begin{lstlisting}
-void swap(int &a, int &b)
-{
-	int tmp = a;
-	a = b;
-	b = tmp;
+void swap(int &a, int &b) {
+  int tmp = a;
+  a = b;
+  b = tmp;
 }
 	\end{lstlisting}
 	Ahogy azt láttuk, túl tudjuk terhelni ezt a függvényt, hogy más típusú objektumokat is meg tudjunk cserélni.
 	Azonban gyorsan megállapítható, hogy állandóan egy újabb overloadot létrehozni nem épp ideális megoldás. Ez a kisebb gond, a nagyobb az, hogy a kódismétlés áldozatai leszünk: ha bármi miatt megváltozna a \texttt{swap} belső implementációja (pl. találunk hatékonyabb megoldást), az összes létező swap függvényben meg kéne ejteni a változtatást. E probléma elkerülésére egy megoldás lehet, ha létrehozunk egy sablont, melynek mintájára a fordító maga tud generálni egy megfelelő függvényt.
 	\begin{lstlisting}
 template <typename T>
-void swap(T &a, T &b)
-{
-	T tmp = a;
-	a = b;
-	b = tmp;
+void swap(T &a, T &b) {
+  T tmp = a;
+  a = b;
+  b = tmp;
 }
 	\end{lstlisting}
 	Az így implementált \texttt{swap} függvény egy \textit{template}, és a template paramétere (\texttt{T}) egy típus. Ez alapján a fordító már létre tud hozni hozni megfelelő függvényeket:
 	\begin{lstlisting}
-int main()
-{
-	int a = 2, b = 3;
-	swap<int>(a, b);
-	
-	double c = 1.3, d = 7.8;
-	swap<double>(c, d);
+int main() {
+  int a = 2, b = 3;
+  swap<int>(a, b);
+
+  double c = 1.3, d = 7.8;
+  swap<double>(c, d);
 }
 	\end{lstlisting}
 	A fordítónak csak annyi dolga van, hogy minden \texttt{T}-t lecseréljen \texttt{int}-re, és már kész is a függvény. A fenti példában mi explicit megmondtuk a fordítónak, hogy \texttt{swap}-ot milyen template paraméterrel {példányosítsa} (\textit{instantiate}), azonban függvényeknél erre nem feltétlenül van szükség: a fordító tudja \texttt{a} és \texttt{b} típusát, így ki tudja találni hogy mit kell behelyettesítenie.
 	\begin{lstlisting}
-int main()
-{
-	int a = 2, b = 3;
-	swap(a, b);
-	
-	double c = 1.3, d = 7.8;
-	swap(c, d);
+int main() {
+  int a = 2, b = 3;
+  swap(a, b);
+
+  double c = 1.3, d = 7.8;
+  swap(c, d);
 }
 	\end{lstlisting}
 	Ezt a folyamatot (amikor a fordító kitalálja a tempalte paramétert) \textbf{template paraméter dedukciónak} (\textit{template parameter deduction}) hívjuk.
@@ -67,15 +63,13 @@ int main()
 	\end{note}
 	\begin{lstlisting}
 template <typename T, int ArraySize>
-int arraySize(const T (&array)[ArraySize])
-{
-	return ArraySize;
+int arraySize(const T (&array)[ArraySize]) {
+  return ArraySize;
 }
 
-int main()
-{
-	int i[10];
-	std::cout << arraySize(i) << std::endl; //10
+int main() {
+  int i[10];
+  std::cout << arraySize(i) << std::endl; // 10
 }
 	\end{lstlisting}
 	A fenti kód a 3. gyakorlat végén tett megjegyzésből lehet ismerős. Jól demonstrálja a template paraméter dedukciót.
@@ -85,17 +79,14 @@ int main()
 #include <iostream>
 
 template <typename T>
-struct X
-{
-	void f()
-	{
-		T t;
-		t.foo();
-	}
+struct X {
+  void f() {
+    T t;
+    t.foo();
+  }
 };
-struct Y
-{
-	void bar() {}
+struct Y {
+  void bar() {}
 };
 int main() {}
 	\end{lstlisting}
@@ -104,17 +95,13 @@ int main() {}
 	\smallskip
 	Példányosítsuk az \texttt{X} osztályt \texttt{Y}-nal!
 \begin{lstlisting}
-int main()
-{
-	X<Y> x;
-}
+int main() { X<Y> x; }
 \end{lstlisting}
 	Ekkor már azt várnánk hogy fordítási hibát dobjon a fordító, hisz \texttt{Y}-nak nincs \texttt{foo()} metódusa, azonban mégis gond nélkül lefordul, mivel az \texttt{f()} tagfüggvényt nem hívtuk meg, így nem is példányosult az osztályon belül.
 	\begin{lstlisting}
-int main()
-{
-	X<Y> x;
-	x.f();
+int main() {
+  X<Y> x;
+  x.f();
 }
 	\end{lstlisting}
 	Itt már végre kapunk fordítási hibát, mert példányosul \texttt{f()}. Ez jól mutatja, hogy a template-ek lusták, és csak akkor példányosulnak, ha ,,nagyon muszáj''.
@@ -123,15 +110,16 @@ int main()
 	A template-eknek adhatunk meg alapértelmezett értéket.
 
 \begin{lstlisting}
-template <typename T = void> //alapértelmezett paraméter
-struct X {/* ... */};
+template <typename T = void> // alapértelmezett paraméter
+struct X {                   /* ... */
+};
 
-struct Y {/* ... */};
+struct Y { /* ... */
+};
 
-int main()
-{
-	X<Y> x;
-	X<> x2;
+int main() {
+  X<Y> x;
+  X<> x2;
 }
 \end{lstlisting}
 	Ilyenkor nem szükséges megadni template paramétert (mely esetben értelemszerűen \texttt{X<> == X<void>}). 
@@ -141,20 +129,18 @@ int main()
 
 \begin{lstlisting}
 template <typename T>
-struct X {/* ... */};
-
-struct Y {/* ... */};
-
-template <template <typename> class Templ>
-struct Z
-{
-	Templ<int> t;
+struct X { /* ... */
 };
 
-int main()
-{
-	Z<X> z;
-}
+struct Y { /* ... */
+};
+
+template <template <typename> class Templ>
+struct Z {
+  Templ<int> t;
+};
+
+int main() { Z<X> z; }
 \end{lstlisting}
 	Fent \texttt{Templ} egy olyan template, aminek a template paramétere egy típus. Így \texttt{Z}-nek a template paramétere egy olyan template, aminek a template paramétere egy típus. Mivel \texttt{X} egy template (és template paramétere egy típus), így megadható \texttt{Z}-nek template paraméterként.
 	\begin{note}
@@ -163,11 +149,10 @@ int main()
 	
 	A fenti példákban mindig egy default konstruktort hívtunk meg, amikor objektumokat hoztunk létre. Helyes lenne-e az, ha explicit módon kíírnánk a zárójeleket (hangsúlyozva a default konstruktor hívást)?
 \begin{lstlisting}
-int main()
-{
-	X<Y> x();
-	X<> y2();
-	Z<X> z();
+int main() {
+  X<Y> x();
+  X<> y2();
+  Z<X> z();
 }
 \end{lstlisting}
 	A kód helyesen lefordul, de a jelentése nem ugyanaz, mintha nem lenne ott a zárójel. Mivel a c++ nyelvtana nem egyértelmű, más kontextusban ugyanaz a kódrészlet mást jelenthet (egyik legegyszerűbb példa a \texttt{static} kulcsszó), így meg kellett alkotni egy olyan szabályt, miszerint amit deklarációként lehet értelmezni, azt deklarációként \textbf{kell} értelmezni. Igy ezek függvénydeklarációk lesznek: Az első esetben például egy olyan függvényt deklarálunk, melynek neve \texttt{x}, \texttt{X<Y>}-al tér vissza és nem vár paramétert. 
@@ -182,11 +167,10 @@ int main()
 template <int N>
 void f() {}
 
-int main()
-{
-	int n;
-	std::cin >> n;
-	f<n>(); //hiba, n nem ismert fordítási időben
+int main() {
+  int n;
+  std::cin >> n;
+  f<n>(); // hiba, n nem ismert fordítási időben
 }
 	\end{lstlisting}
 	Ez nyilvánvaló, hisz a template-eknek az a funkciója, hogy a fordító generáljon belőlük példányokat, és a fordítási idő végeztével erre nincs lehetőség.
@@ -198,29 +182,30 @@ int main()
 	
 	\begin{lstlisting}
 template <class T>
-struct A
-{
-	A()	{ std::cout << "general A" << std::endl; }
+struct A {
+  A() { std::cout << "general A" << std::endl; }
 };
 
-template <> //template specializáció
-struct A<int>
-{
-	A() { std::cout << "special A" << std::endl; }
+template <> // template specializáció
+struct A<int> {
+  A() { std::cout << "special A" << std::endl; }
 };
 
 template <class T>
-void f() { std::cout << "general f" << std::endl; }
+void f() {
+  std::cout << "general f" << std::endl;
+}
 
-template<> //template specializáció
-void f<int>() { std::cout << "special f" << std::endl; }
+template <> // template specializáció
+void f<int>() {
+  std::cout << "special f" << std::endl;
+}
 
-int main() 
-{
-	A<std::string> a1; //general A
-	f<std::string>(); //general f
-	A<int> a2; //special A
-	f<int>(); //special f
+int main() {
+  A<std::string> a1; // general A
+  f<std::string>();  // general f
+  A<int> a2;         // special A
+  f<int>();          // special f
 }
 	\end{lstlisting}
 	Mind \texttt{A} osztályhoz, mind \texttt{f} függvényhez létrehoztunk egy specializációt arra az esetre, ha a template paraméterként \texttt{int}-et kapnak. Számos okunk lehet arra hogy ezt tegyük: a standard könyvtár megfényesebb példája az \texttt{std::vector} osztály, mely egy template, és van template specializációja \texttt{bool} esetre.
@@ -236,21 +221,18 @@ int main()
 	\end{note}
 	Írjunk faktoriális számoló algoritmus template-ek segítségével!
 	\begin{lstlisting}
-template<int N>                           
-struct Fact 
-{                             
-	static const int val = N*Fact<N-1>::val;
+template <int N>
+struct Fact {
+  static const int val = N * Fact<N - 1>::val;
 };
 
-template<>                                
-struct Fact<0>
-{                          
-	static const int val = 1;               
-};               
+template <>
+struct Fact<0> {
+  static const int val = 1;
+};
 
-int main() 
-{                                          
-	std::cout << Fact<5>::val << std::endl; //120
+int main() {
+  std::cout << Fact<5>::val << std::endl; // 120
 }
 	\end{lstlisting}
 	\texttt{Fact} 4szer példányosul: \texttt{Fact<5>, \ldots, Fact<1>,} majd a legvégén az általunk specializált \texttt{Fact<0>}-t hívja meg.
@@ -261,26 +243,21 @@ int main()
 	
 	\begin{lstlisting}
 template <class T>
-class A
-{
-	static int count;
+class A {
+  static int count;
+
 public:
-	A()
-	{
-		std::cout << ++count << ' ';
-	}
+  A() { std::cout << ++count << ' '; }
 };
 
 template <class T>
 int A<T>::count = 0;
 
-int main() 
-{
-	for(int i = 0; i<5; i++)
-	{
-		A<int> a;
-		A<double> b;
-	}
+int main() {
+  for (int i = 0; i < 5; i++) {
+    A<int> a;
+    A<double> b;
+  }
 }
 	\end{lstlisting}
 	Kimenet: \texttt{1 1 2 2 3 3 4 4 5 5}
@@ -291,72 +268,60 @@ int main()
 	
 	Lehetőségünk van arra hogy osztályon belül deklaráljunk még egy osztályt. Bár erről bővebben a következő órai jegyzetben lesz szó, egy igen fontos problémát vet fel.
 	\begin{lstlisting}
-class A
-{
+class A {
 public:
-	class X {};
+  class X {};
 };
 
-void f(A a)
-{
-	A::X x;
-}
+void f(A a) { A::X x; }
 
-int main()
-{
-	A a;
-	f(a);
+int main() {
+  A a;
+  f(a);
 }
 	\end{lstlisting}
 	Ezzel semmi probléma nincs. Legyen A egy template osztály!
 	\begin{lstlisting}
 template <class T>
-class A
-{
+class A {
 public:
-	class X {};
+  class X {};
 };
 
 template <class T>
-void f(A<T> a)
-{
-	A<T>::X x;
+void f(A<T> a) {
+  A<T>::X x;
 }
 
-int main()
-{
-	A<int> a;
-	f(a);
+int main() {
+  A<int> a;
+  f(a);
 }
 	\end{lstlisting}
 	Itt máris bajba jutottunk, a fordító azt a hibát fogja jelezni, hogy \texttt{X} egy un. \textbf{dependent scope}-ban van. Ez azt jelenti, hogy attól függően, milyen template paraméterrel példányosítjuk \texttt{A}-t, \texttt{X}-nek lehet más a jelentése. Az alábbi kód ezt jól demonstrálja:
 	\begin{lstlisting}
 template <typename T>
-struct A
-{
-	class X{};
+struct A {
+  class X {};
 };
 
 template <>
-struct A <int>
-{
-	static int X;
+struct A<int> {
+  static int X;
 };
 
 int A<int>::X = 0;
 
 template <typename T>
-void f()
-{
-	A<T>::X;
+void f() {
+  A<T>::X;
 }
 	\end{lstlisting}
 	Itt az \texttt{f} függvényben vajon mi lesz \texttt{A<T>::X}? A válasz az hogy nem tudni, hisz ha \texttt{int}-el példányosítunk akkor statikus adattag, ha bármi mással, akkor meg egy típus. Ezért kell a fordítónak biztosítani, hogy a template paramétertől függetlenül garantáltan típust fog oda kerülni. Ezt a \texttt{typename} kulcssszóval tehetjük meg.
 	\begin{lstlisting}
 template <typename T>
-void f()
-{
-	typename A<T>::X;
+void f() {
+  typename A<T>::X;
 }
 	\end{lstlisting}
 	A \texttt{typename} garantálja a fordítónak, hogy bármi is lesz \texttt{T}, \texttt{A<T>::X} mindenképpen típus lesz. Ha mégis olyan template paramétert adunk meg, aminél ez nem teljesülne (ez esetben \texttt{T = int}) akkor fordítási idejű hibát kapunk.
@@ -383,66 +348,63 @@ void f()
 
 #include <iosfwd>
 
-template<typename T>
+template <typename T>
 class List;
 
-namespace detail 
-{
-	template<typename T>
-	class Iterator
-	{
-	public:
-		explicit Iterator(List<T> *p) : p(p) {}
-		bool operator==(Iterator other) const { return p == other.p; }
-		bool operator!=(Iterator other) const { return !(*this == other); }
-		Iterator operator++();
-		T& operator*() const;
-	private:
-		template<typename>
-		friend class ConstIterator;
-		List<T> *p;
-	};
-	
-	template<typename T>
-	class ConstIterator
-	{
-	public:
-		ConstIterator(Iterator<T> it) : p(it.p) {}
-		explicit ConstIterator(const List<T> *p) : p(p) {}
-		bool operator==(ConstIterator other) const { return p == other.p; }
-		bool operator!=(ConstIterator other) const 
-											  { return !(*this == other); }
-		ConstIterator operator++();
-		const T& operator*() const; //konstans referenciával tér vissza!
-	private:
-		const List<T> *p;
-	};	
-}
-
+namespace detail {
 template <typename T>
-class List 
-{
+class Iterator {
 public:
-	typedef detail::Iterator<T> Iterator;
-	typedef detail::ConstIterator<T> ConstIterator;
-	explicit List(const T &data_, List *next = 0) : data(data_), next(next) {}
-	~List() { delete next; }
-	List(const List &other);
-	List& operator=(const List &other);
-	void add(const T &data);
-	Iterator begin() { return Iterator(this); }
-	ConstIterator begin() const { return ConstIterator(this); }
-	Iterator end() { return Iterator(0); }
-	ConstIterator end() const { return ConstIterator(0); }
+  explicit Iterator(List<T> *p) : p(p) {}
+  bool operator==(Iterator other) const { return p == other.p; }
+  bool operator!=(Iterator other) const { return !(*this == other); }
+  Iterator operator++();
+  T &operator*() const;
+
 private:
-	friend Iterator;
-	friend ConstIterator;
-	T data;
-	List *next;
+  template <typename>
+  friend class ConstIterator;
+  List<T> *p;
 };
 
-template<typename T>
-std::ostream &operator<<(std::ostream& os, const List<T> &l);
+template <typename T>
+class ConstIterator {
+public:
+  ConstIterator(Iterator<T> it) : p(it.p) {}
+  explicit ConstIterator(const List<T> *p) : p(p) {}
+  bool operator==(ConstIterator other) const { return p == other.p; }
+  bool operator!=(ConstIterator other) const { return !(*this == other); }
+  ConstIterator operator++();
+  const T &operator*() const; // konstans referenciával tér vissza!
+private:
+  const List<T> *p;
+};
+} // namespace detail
+
+template <typename T>
+class List {
+public:
+  typedef detail::Iterator<T> Iterator;
+  typedef detail::ConstIterator<T> ConstIterator;
+  explicit List(const T &data_, List *next = 0) : data(data_), next(next) {}
+  ~List() { delete next; }
+  List(const List &other);
+  List &operator=(const List &other);
+  void add(const T &data);
+  Iterator begin() { return Iterator(this); }
+  ConstIterator begin() const { return ConstIterator(this); }
+  Iterator end() { return Iterator(0); }
+  ConstIterator end() const { return ConstIterator(0); }
+
+private:
+  friend Iterator;
+  friend ConstIterator;
+  T data;
+  List *next;
+};
+
+template <typename T>
+std::ostream &operator<<(std::ostream &os, const List<T> &l);
 
 #endif
 \end{lstlisting}
@@ -451,99 +413,83 @@ std::ostream &operator<<(std::ostream& os, const List<T> &l);
 #include "list.hpp"
 #include <iostream>
 
-template<typename T>
-List<T>::List(const List &other) : data(other.data), next(0) 
-{
-	if (other.next != 0) 
-	{
-		next = new List(*other.next);
-	}
-}
-
-template<typename T>
-List<T> &List<T>::operator=(const List<T> &other) 
-{
-	if (this == &other)
-		return *this;
-	delete next;
-	data = other.data;
-	if (other.next) 
-	{
-		next = new List(*other.next);
-	} 
-	else 
-	{
-		next = 0;
-	}
-	return *this;
+template <typename T>
+List<T>::List(const List &other) : data(other.data), next(0) {
+  if (other.next != 0) {
+    next = new List(*other.next);
+  }
 }
 
 template <typename T>
-void List<T>::add(const T &data) 
-{
-	if (next == 0) 
-	{
-		next = new List(data);
-	} 
-	else 
-	{
-		next->add(data);
-	}
+List<T> &List<T>::operator=(const List<T> &other) {
+  if (this == &other)
+    return *this;
+  delete next;
+  data = other.data;
+  if (other.next) {
+    next = new List(*other.next);
+  } else {
+    next = 0;
+  }
+  return *this;
 }
 
-namespace detail 
-{
-	template <typename T>
-	Iterator<T> Iterator<T>::operator++() 
-	{
-		p = p->next;
-		return *this;
-	}
-	
-	template <typename T>
-	T& Iterator<T>::operator*() const 
-	{
-		return p->data;
-	}
-	
-	template <typename T>
-	ConstIterator<T> ConstIterator<T>::operator++() 
-	{
-		p = p->next;
-		return *this;
-	}
-	
-	template <typename T>
-	const T& ConstIterator<T>::operator*() const 
-	{
-		return p->data;
-	}
+template <typename T>
+void List<T>::add(const T &data) {
+  if (next == 0) {
+    next = new List(data);
+  } else {
+    next->add(data);
+  }
 }
 
-template<typename T>
-std::ostream& operator<<(std::ostream& os, const List<T> &l) 
-{
-	for(typename List<T>::ConstIterator it = l.begin(); it != l.end(); ++it) //dependent scope!
-	{
-		os << *it << ' ';
-	}
-	os << std::endl;
-	return os;
+namespace detail {
+template <typename T>
+Iterator<T> Iterator<T>::operator++() {
+  p = p->next;
+  return *this;
+}
+
+template <typename T>
+T &Iterator<T>::operator*() const {
+  return p->data;
+}
+
+template <typename T>
+ConstIterator<T> ConstIterator<T>::operator++() {
+  p = p->next;
+  return *this;
+}
+
+template <typename T>
+const T &ConstIterator<T>::operator*() const {
+  return p->data;
+}
+} // namespace detail
+
+template <typename T>
+std::ostream &operator<<(std::ostream &os, const List<T> &l) {
+  for (typename List<T>::ConstIterator it = l.begin(); it != l.end();
+       ++it) // dependent scope!
+  {
+    os << *it << ' ';
+  }
+  os << std::endl;
+  return os;
 }
 \end{lstlisting}
 	
 	\fbox{\textbf{main.cpp}}
 	\begin{lstlisting}
-#include <iostream>
 #include "list.hpp"
+#include <iostream>
 
-int main() 
-{
-	List<int> head(5);
-	head.add(8);
-	head.add(10);
-	head.add(8);
-	std::cout << head;
+int main() {
+  List<int> head(5);
+  head.add(8);
+  head.add(10);
+  head.add(8);
+  std::cout << head;
 }
 	\end{lstlisting}
 	Fordításnál azonban linkelési hibát kapunk, de miért? A list.hpp-ben benne van mindenféle deklaráció, és a list.cpp-ben meg több \texttt{List}-béli implementáció. A válasz a template-ek lustaságában rejlik.
