--- a/book/10gy_cpp/10gy_cpp.tex
+++ b/book/10gy_cpp/10gy_cpp.tex
@@ -59,11 +59,10 @@ struct forward_iterator_tag {};
 struct bidirectional_iterator_tag {};
 struct random_access_iterator_tag {};
 
-class ExampleIterator
-{
+class ExampleIterator {
 public:
-	typedef iterator_category forward_iterator_tag;
-	//...
+  typedef iterator_category forward_iterator_tag;
+  //...
 };
 	\end{lstlisting}
 	Ezzel a trükkel könnyedén tudunk hivatkozni egy iterátor típusára, elég csupán annyit írnunk hogy 
@@ -83,15 +82,13 @@ public:
 	
 	\begin{lstlisting}
 template <class T>
-class Iterator : public std::iterator<std::forward_iterator_tag, T>
-{
-	//...
+class Iterator : public std::iterator<std::forward_iterator_tag, T> {
+  //...
 };
 
 template <class T>
-class ConstIterator : public std::iterator<std::forward_iterator_tag, T>
-{
-	//...
+class ConstIterator : public std::iterator<std::forward_iterator_tag, T> {
+  //...
 };
 	\end{lstlisting}
 	A cppreference-en megfigyelhető, hogy az \texttt{std::iterator} több típust is tartalmaz, mellyel az iterátorunk jellemezhető. Minden STL konténer iterátora rendelkezik ezekkel a típusokkal, és számunkra is kifizetődő használni.
@@ -102,8 +99,8 @@ class ConstIterator : public std::iterator<std::forward_iterator_tag, T>
 	\smallskip
 	A fenti táblázatban megfigyelhettük, hogy a tömbnek is van iterátora -- természetesen ez az a pointer, amivel végig tudunk lépegetni a tömb elemein (pl. egy \texttt{int[]} tömb típus esetén ez \texttt{int*} lenne). Ez valóban iterátor, hisz dereferálható, léptethető, stb. Azonban egy \texttt{int*} típusnak nincs \texttt{iterator\_category}-ja! Ezt a problémát megoldhatjuk úgy, hogy ha egy tetszőleges \texttt{It} iterátor esetén nem \texttt{It::iterator\_category}-val kérdezzük le az iterátor kategóriáját, hanem az \texttt{std::iterator\_traits} osztállyal:
 	\begin{lstlisting}
-std::iterator_traits<std::vector<int>::iterator> >::iterator_category cat1;
-std::iterator_traits<int*>::iterator_category cat2;
+std::iterator_traits<std::vector<int>::iterator>> ::iterator_category cat1;
+std::iterator_traits<int *>::iterator_category cat2;
 std::iterator_traits<List::Iterator>::iterator_category cat3;
 	\end{lstlisting}
 	\section{STL algoritmusok}
@@ -119,36 +116,32 @@ std::iterator_traits<List::Iterator>::iterator_category cat3;
 	
 	Az STL algoritmusok alap gondolatmenetét jól demonstrálja az alábbi példa : Írjunk egy függvény mely egy \texttt{std::vector<int>} konténernek a második adott értékű elemére hivatkozó iterátort ad vissza!
 	\begin{lstlisting}
-#include <vector>
 #include <iostream>
+#include <vector>
 
 typedef std::vector<int>::iterator VectIt;
 
-VectIt findSecond(VectIt begin, VectIt end, const int &v)
-{
-	while(begin != end && *begin != v)
-	{
-		++begin;
-	}
-	if (begin == end)
-		return end;
-	++begin;
-	while(begin != end && *begin != v)
-	{
-		++begin;
-	}
-	return begin;
+VectIt findSecond(VectIt begin, VectIt end, const int &v) {
+  while (begin != end && *begin != v) {
+    ++begin;
+  }
+  if (begin == end)
+    return end;
+  ++begin;
+  while (begin != end && *begin != v) {
+    ++begin;
+  }
+  return begin;
 }
 
-int main()
-{
-	std::vector<int> v;
-	for (int i = 0; i<10; i++)
-		v.push_back(i);
-	v.push_back(5);
-	std::vector<int>::iterator it = findSecond(v.begin(), v.end(), 5);
-	if (it != v.end())
-		std::cout << *it << std::endl; // 5
+int main() {
+  std::vector<int> v;
+  for (int i = 0; i < 10; i++)
+    v.push_back(i);
+  v.push_back(5);
+  std::vector<int>::iterator it = findSecond(v.begin(), v.end(), 5);
+  if (it != v.end())
+    std::cout << *it << std::endl; // 5
 }
 	\end{lstlisting}
 	Amennyiben \texttt{findSecond} nem talál két \texttt{v}-vel ekvivalens elemet, egy past-the-end iterátort ad vissza.
@@ -156,24 +149,20 @@ int main()
 	\smallskip
 	Azonban könnyű látni, hogy egyáltalán nem fontos információ az algoritmus szempontjából, hogy a \texttt{vector} \texttt{int}-eket tárol.
 	\begin{lstlisting}
-template<class T>
-typename std::vector<T>::iterator 
-	findSecond(typename std::vector<T>::iterator begin, 
-			   typename std::vector<T>::iterator end, 
-			   const T &v)
-{
-	while(begin != end && *begin != v)
-	{
-		++begin;
-	}
-	if (begin == end)
-		return end;
-	++begin;
-	while(begin != end && *begin != v)
-	{
-		++begin;
-	}
-	return begin;
+template <class T>
+typename std::vector<T>::iterator
+findSecond(typename std::vector<T>::iterator begin,
+           typename std::vector<T>::iterator end, const T &v) {
+  while (begin != end && *begin != v) {
+    ++begin;
+  }
+  if (begin == end)
+    return end;
+  ++begin;
+  while (begin != end && *begin != v) {
+    ++begin;
+  }
+  return begin;
 }
 	\end{lstlisting}
 	Sajnos sikerült elég kilométer függvény fejlécet sikerült írnunk, de a célt elértük.
@@ -182,9 +171,8 @@ typename std::vector<T>::iterator
 	Megállapítható, hogy itt még azt se kell tudnunk, minek az iterátorával dolgozunk, elegendő annyit tudnunk, hogy a \texttt{++} iterátorral lehet léptetni, és össze tudjuk hasonlítani őket az \texttt{!=} operátorral, azaz teljesítik egy input iterator feltételeit. Első körben vegyük az összehasonlítandó elem típusát külön template paraméterként.
 	\begin{lstlisting}
 template <class InputIt, class Val>
-InputIt findSecond(InputIt begin, InputIt end, const Val &v)
-{
-	//...
+InputIt findSecond(InputIt begin, InputIt end, const Val &v) {
+  //...
 }
 	\end{lstlisting}
 	
@@ -193,42 +181,37 @@ InputIt findSecond(InputIt begin, InputIt end, const Val &v)
 	\medskip
 	A korábban elhangzottak alapján implementáljunk az \texttt{advance} függvényt, mely egy iterátort léptet előre: Amennyiben a paraméterként kapott iterátor kategóriája bidirectional iterator, egyesével lépegessünk a kívánt helyre, random access iterator esetén egyből ugorjunk oda.  Ehhez használjuk ki azt, amit fentebb láttunk: az \texttt{std::iterator}-ból való öröklés hatására már le tudjuk kérdezni az iterátorunk kategóriáját!
 	\begin{lstlisting}
-template<typename BDIT> 
-BDIT algorithm(BDIT it, int pos, std::bidirectional_iterator_tag) 
-{
-	for(int i = 0; i<pos; i++)
-		++it;
-	std::cout << "Slow" << ' ';
-	return it;
+template <typename BDIT>
+BDIT algorithm(BDIT it, int pos, std::bidirectional_iterator_tag) {
+  for (int i = 0; i < pos; i++)
+    ++it;
+  std::cout << "Slow" << ' ';
+  return it;
 }
 
-template<typename RAIT>
-RAIT algorithm(RAIT it, int pos, std::random_access_iterator_tag) 
-{
-	std::cout << "Fast" << ' ';
-	return it + pos;
+template <typename RAIT>
+RAIT algorithm(RAIT it, int pos, std::random_access_iterator_tag) {
+  std::cout << "Fast" << ' ';
+  return it + pos;
 }
 
-template<typename IT> 
-IT advance(IT it, int pos) 
-{
-	typedef typename std::iterator_traits<IT>::iterator_category cat;
-	return algorithm(it, pos, cat());
+template <typename IT>
+IT advance(IT it, int pos) {
+  typedef typename std::iterator_traits<IT>::iterator_category cat;
+  return algorithm(it, pos, cat());
 }
 
-int main() 
-{
-	std::vector<int> v;
-	std::list<int> l;
-	for (int i = 0; i<10; i++)
-	{
-		v.push_back(i);
-		l.push_front(i);
-	}
-	//advance iterátorral tér vissza, dereferálni kell a kiíratáshoz
-	std::cout << *advance(v.begin(), 3) << std::endl; // Fast 3
-	std::cout << *advance(l.begin(), 3) << std::endl; // Slow 6
-}  
+int main() {
+  std::vector<int> v;
+  std::list<int> l;
+  for (int i = 0; i < 10; i++) {
+    v.push_back(i);
+    l.push_front(i);
+  }
+  // advance iterátorral tér vissza, dereferálni kell a kiíratáshoz
+  std::cout << *advance(v.begin(), 3) << std::endl; // Fast 3
+  std::cout << *advance(l.begin(), 3) << std::endl; // Slow 6
+}
 	\end{lstlisting}
 	\begin{note}
 		Az \texttt{std::vector} és \texttt{std::list}-nél felmerült iterátor lépegetésre találtunk megoldást: a fentihez hasonló működésű \texttt{std::advance} alkalmazható e célra.
@@ -243,16 +226,15 @@ int main()
 	\subsection{find, find\_if}
 	Az \texttt{std::find} segítségével az első adott értékű elemre hivatkozó iterátort kaphatunk. Keressük meg a 4-el ekvivalens elemet!
 	\begin{lstlisting}
-int main()
-{
-	std::vector<int> v;
-	for(int i = 0; i<10; i++)
-		s.insert(i);
-	std::vector<int>::iterator result = find(v.begin(), v.end(), 4);
-	if (result != v.end())
-		std::cout << *result << std::endl; // 4
-	else
-		std::cout << "4 nem eleme" << std::endl;
+int main() {
+  std::vector<int> v;
+  for (int i = 0; i < 10; i++)
+    s.insert(i);
+  std::vector<int>::iterator result = find(v.begin(), v.end(), 4);
+  if (result != v.end())
+    std::cout << *result << std::endl; // 4
+  else
+    std::cout << "4 nem eleme" << std::endl;
 }
 	\end{lstlisting}
 	\begin{note}
@@ -262,42 +244,35 @@ int main()
 	\begin{lstlisting}
 std::set<int>::iterator it = v.find(4);
 if (i != v.end())
-	//...
+//...
 	\end{lstlisting}
 	Azonban megállapítandó, hogy míg az \texttt{std::find} az \texttt{==} operátorral végzi az összehasonlítást, addig az \texttt{std::set} a template paraméterként kapott rendezéssel! (ami alapértelemzetten a \texttt{<} operátortól függ.)
 \begin{lstlisting}
-struct Circle
-{
-	int x, y, r;
-	Circle(int _x, int _y, int _r) : x(_x), y(_y), r(_r) {}
+struct Circle {
+  int x, y, r;
+  Circle(int _x, int _y, int _r) : x(_x), y(_y), r(_r) {}
 };
 
-bool operator<(const Circle &lhs, const Circle &rhs)
-{
-	return lhs.r < lhs.r;
+bool operator<(const Circle &lhs, const Circle &rhs) { return lhs.r < lhs.r; }
+
+bool operator==(const Circle &lhs, const Circle &rhs) {
+  return lhs.r == rhs.r && lhs.x == rhs.y && lhs.y == rhs.y;
 }
 
-bool operator==(const Circle &lhs, const Circle &rhs)
-{
-	return lhs.r == rhs.r && lhs.x == rhs.y && lhs.y == rhs.y;
-}
+int main() {
+  std::set<Circle> s;
+  for (int i = 0; i < 10; i++)
+    s.insert(Circle(i, i + 1, i + 4));
+  for (int i = 0; i < 10; i++)
+    s.insert(Circle(i, i + 1, i + 2));
 
-int main()
-{
-	std::set<Circle> s;
-	for(int i = 0; i<10; i++)
-		s.insert(Circle(i, i + 1, i + 4));
-	for(int i = 0; i<10; i++)
-		s.insert(Circle(i, i + 1, i + 2));
-	
-	std::set<Circle>::iterator it1 = s.find(Circle(2, 3, 4));
-	std::set<Circle>::iterator it2 = find(s.begin(), s.end(), 
-														Circle(2, 3, 4));
-	
-	if(it1 != s.end())
-		std::cout << it1->x << ' ' << it1->y << ' ' << it1->r; // 0 1 4
-	if(it2 != s.end())
-		std::cout << it2->x << ' ' << it2->y << ' ' << it2->r; // 1 9 10
+  std::set<Circle>::iterator it1 = s.find(Circle(2, 3, 4));
+  std::set<Circle>::iterator it2 = find(s.begin(), s.end(), Circle(2, 3, 4));
+
+  if (it1 != s.end())
+    std::cout << it1->x << ' ' << it1->y << ' ' << it1->r; // 0 1 4
+  if (it2 != s.end())
+    std::cout << it2->x << ' ' << it2->y << ' ' << it2->r; // 1 9 10
 }
 \end{lstlisting}
 	Ezzel semmi komolyabb gond nincs, de nem szabad meglepődni, amikor az ember ettől függően más megoldást kap mint amire számít.
@@ -305,34 +280,29 @@ int main()
 	\medskip
 	Néha nem egy adott értéket keresünk, hanem egy adott tulajdonságú elemet. Ezt megtehetjük az \texttt{std::find\_if} függvénnyel, mely nem egy adott értéket, hanem egy \textit{unary predicate}-et vár (azaz, ami egy adott elemhez egy logikai értéket rendel).
 	\begin{lstlisting}
-struct BigNumber
-{
-	bool operator()(const int param) const
-	{
-		return param > 100;
-	}
+struct BigNumber {
+  bool operator()(const int param) const { return param > 100; }
 };
 
-int main()
-{
-	std::vector<int> v;
-	v.push_back(1);	v.push_back(7);	v.push_back(110);
-	std::vector<int>::iterator it = find_if(v.begin(), v.end(),
-															   BigNumber());
-	if(it != v.end())
-		std::cout << *it << std::endl; // 110
+int main() {
+  std::vector<int> v;
+  v.push_back(1);
+  v.push_back(7);
+  v.push_back(110);
+  std::vector<int>::iterator it = find_if(v.begin(), v.end(), BigNumber());
+  if (it != v.end())
+    std::cout << *it << std::endl; // 110
 }
 	\end{lstlisting}
 	\subsection{sort és stable\_sort}
 	A következő példában próbáljuk rendezni egy \texttt{vector} elemeit!
 	\begin{lstlisting}
-std::vector<int> v {6,3,7,4,1,3};
-std::set<int> s {6,3,7,4,1,3};
+std::vector<int> v{6, 3, 7, 4, 1, 3};
+std::set<int> s{6, 3, 7, 4, 1, 3};
 std::set<int> s1(v.begin(), v.end());
 v.assign(s1.begin(), s1.end());
-for(std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
-{
-	std::cout << *it << std::endl; // 1 3 4 6 7 
+for (std::vector<int>::iterator it = v.begin(); it != v.end(); ++it) {
+  std::cout << *it << std::endl; // 1 3 4 6 7
 }
 	\end{lstlisting}
 %	for(int i : v)
@@ -349,30 +319,25 @@ for(std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
 	\end{note}
 	Az ilyen jellegű barkácsolások sose fogadhatóak el hatékonyság szempontjából. Ismerkedjünk meg az ennél sokkal hatékonyabb \texttt{std::sort}-al!
 	\begin{lstlisting}
-std::vector<int> v {6,3,7,4,1,3};
+std::vector<int> v{6, 3, 7, 4, 1, 3};
 std::sort(v.begin(), v.end());
-for(std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
-	std::cout << *it << ' '; // 1 3 3 4 6 7
+for (std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
+  std::cout << *it << ' '; // 1 3 3 4 6 7
 	\end{lstlisting}
 	Az \texttt{std::sort}, ha külön paramétert nem adunk neki, az \texttt{<} operátor szerint rendez.
 	
 	\medskip
 	Rendezzük a fenti elemeket úgy, hogy a \texttt{>} operátor szerint legyenek sorban!
 	\begin{lstlisting}
-struct Greater
-{
-	bool operator()(int lhs, int rhs) const
-	{
-		return lhs > rhs;
-	}
+struct Greater {
+  bool operator()(int lhs, int rhs) const { return lhs > rhs; }
 };
 
-int main()
-{
-	std::vector<int> v {6,3,7,4,1,3};
-	sort(v.begin(), v.end(), Greater());
-	for(std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
-		std::cout << *it << ' '; // 7 6 4 3 3 1 
+int main() {
+  std::vector<int> v{6, 3, 7, 4, 1, 3};
+  sort(v.begin(), v.end(), Greater());
+  for (std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
+    std::cout << *it << ' '; // 7 6 4 3 3 1
 }
 	\end{lstlisting}
 	\begin{note}
@@ -380,29 +345,25 @@ int main()
 	\end{note}
 	Az \texttt{std::sort} az ekvivalens elemek sorrendjét nem (feltétlenül) tartja meg: rendezés után azoknak a sorrendje nem definiált.
 	\begin{lstlisting}
-struct StringLength
-{
-	bool operator()(const std::string &lhs, const std::string &rhs) const
-	{
-		return lhs.size() < rhs.size();
-	}
+struct StringLength {
+  bool operator()(const std::string &lhs, const std::string &rhs) const {
+    return lhs.size() < rhs.size();
+  }
 };
 
-int main()
-{
-	std::vector<std::string> v;
-	v.push_back("ADA");
-	v.push_back("Java");
-	v.push_back("1234567");
-	v.push_back("Maci");
-	v.push_back("C++");
-	v.push_back("Haskell");
-	
-	sort(v.begin(), v.end(), StringLength());
-	
-	for(std::vector<std::string>::iterator it = v.begin(); it != v.end(); 
-																	  ++it)
-		std::cout << *it << ' ';
+int main() {
+  std::vector<std::string> v;
+  v.push_back("ADA");
+  v.push_back("Java");
+  v.push_back("1234567");
+  v.push_back("Maci");
+  v.push_back("C++");
+  v.push_back("Haskell");
+
+  sort(v.begin(), v.end(), StringLength());
+
+  for (std::vector<std::string>::iterator it = v.begin(); it != v.end(); ++it)
+    std::cout << *it << ' ';
 }
 	\end{lstlisting}
 	Lehetséges output: \texttt{C++, ADA, Java, Maci, Haskell, 1234567}.
@@ -421,20 +382,16 @@ std::stable_sort(v.begin(), v.end(), StringLength());
 	\subsection{partition, stable\_partition}
 	Osszunk szét egy vektort úgy, hogy a vektor egyik felében páros, a másik felében páratlan számok legyenek!
 	\begin{lstlisting}
-struct Even
-{
-	bool operator()(const int param)
-	{
-		return param % 2 == 0;
-	}
+struct Even {
+  bool operator()(const int param) { return param % 2 == 0; }
 };
 
 std::vector<int> v;
-for(int i = 0; i<10; i++)
-	v.push_back(i);
+for (int i = 0; i < 10; i++)
+  v.push_back(i);
 std::partition(v.begin(), v.end(), Even());
-for(int i = 0; i<v.size(); i++)
-	std::cout << v[i] << std::endl;
+for (int i = 0; i < v.size(); i++)
+  std::cout << v[i] << std::endl;
 	\end{lstlisting}
 	Lehetséges kimenet: \texttt{1 5 7 9 3 2 6 4 8}
 	
@@ -442,14 +399,14 @@ for(int i = 0; i<v.size(); i++)
 	\subsection{remove, remove\_if}
 	Az \texttt{std::remove} algoritmus a konténerben lévő elemek törlését segíti elő. Töröljük ki egy vectorból az összes 3-al ekvivalens elemet!
 	\begin{lstlisting}
-std::vector<int> v{1,2,3,3,4,5,6};
+std::vector<int> v{1, 2, 3, 3, 4, 5, 6};
 std::cout << v.size() << std::endl; // 7
 remove(v.begin(), v.end(), 3);
 std::cout << v.size() << std::endl; // 7
 	\end{lstlisting}
 	Legnagyobb meglepetésünkre, ez semmit se fog törölni: az \texttt{std::remove} átrendezi a konténert, úgy hogy a konténer elején legyenek a nem törlendő elemeket, és utána a törlendőek, és az első törlendő elemre visszaad egy iterátort. Ennek segítségével tudjuk, hogy ettől az iterátortól a past-the-end iteratorig minden törlendő.
 	\begin{lstlisting}
-std::vector<int> v{1,2,3,3,4,5,6};
+std::vector<int> v{1, 2, 3, 3, 4, 5, 6};
 std::cout << v.size() << std::endl; // 7
 auto it = remove(v.begin(), v.end(), 3);
 v.erase(it, v.end());
